<resources>
    <string name="app_name">KelompokSatuAdmin</string>
    <string name="kelompok_satu_admin">Kelompok Satu (Admin)</string>
    <string name="kelompok">Kelompok</string>
    <string name="satu">Satu</string>
    <string name="admin">ADMIN</string>
    <string name="login_with_google">Login with Google</string>
    <string name="paket">Paket</string>
    <string name="pesanan">Pesanan</string>
    <string name="user">User</string>
    <string name="guide">Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halo_admin">Halo, Admin!</string>
    <string name="logout">Logout</string>
    <string name="tambah_paket">Tambah Paket</string>
    <string name="merbabu_via_selo">Merbabu via Selo</string>
    <string name="jawa_tengah">Jawa Tengah</string>
    <string name="rp_500_000">Rp 500.000,-</string>
    <string name="_3d_2n">3D 2N</string>
    <string name="tambah_paket_pendakian">Tambah Paket Pendakian</string>
    <string name="nama_paket">Nama Paket</string>
    <string name="durasi">Durasi</string>
    <string name="domisili">Domisili</string>
    <string name="harga">Harga</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="pilih_gambar_untuk_poster">Pilih Gambar untuk Poster</string>
    <string name="tambah">Tambah</string>
    <string name="edit_hapus_paket">Edit Paket</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="status">Status</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="nama_user">Nama User</string>
    <string name="nomor_hp">082144285606</string>
    <string name="email">kelompoksatu@gmail.com</string>
    <string name="daftar_user">Daftar User</string>
    <string name="daftar_guide">Daftar Guide</string>
    <string name="tambah_guide">Tambah Guide</string>
    <string name="nama_guide">Nama Guide</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="e_mail">E-Mail</string>
    <string name="pilih_gambar_untuk_foto_profil">Pilih Gambar untuk Foto Profil</string>
    <string name="masukkan_foto_ktp">Masukkan Foto KTP</string>
    <string name="edit_data_guide">Edit Data Guide</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="rp">Rp</string>
    <string name="_1000000">1000000</string>
    <string name="koma">,-</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="umur">Umur</string>
    <string name="motto">Motto</string>
</resources>