<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_paket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="142dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_mountains"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_gunung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merbabu_via_selo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_domisili"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jawa_tengah"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_gunung" />

        <TextView
            android:id="@+id/tv_durasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3d_2n"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_domisili" />

        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_500_000"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_durasi"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>